# marl-ppo-suite

./: .dockerignore  .gitignore  README.md  __init__.py  environment.yaml  install_smac_linux.sh  install_smac_mac.sh  legacy_fpas_train.py  light_train.py  push_to_hf.py  pyproject.toml  requirements.txt  setup.py  train.py  wandb_download.py
algos/: __init__.py  light_mappo.py  light_rnn_mappo.py  mappo.py  mappo_mlp.py  mappo_readme.md  mappo_rnn.py
algos/happo/: __init__.py  _agent.py  main.py
buffers/: agent_rollout_view.py  as_rnn_buffer.py  light_rollout_storage.py  rnn_buffer.py  rollout_storage.py
cloud/: README.md  build_and_push.sh  docker-compose.yml  make_executable.sh  test_docker.sh  train.sh  train_simple.sh
cloud/examples/: docker_examples.sh
cloud/runpods/: Dockerfile  Dockerfile.latest  Dockerfile.test  entrypoint.sh
cloud/standalone/: README.md  app_setup.sh  run_experiments.sh  server_setup.sh  tmux_session.sh
envs/: __init__.py  env_factory.py  env_ray_vec.py  env_shared_memory_vec.py  env_vectorization.py
envs/smacv1/: Starcraft2_Env.py
envs/smacv2/: README.md  __init__.py  smacv2_env.py
envs/wrappers/: __init__.py  agent_id_wrapper.py  agent_specific_state_wrapper.py  base_wrapper.py  death_masking_wrapper.py  feature_pruned_state_wrapper.py
networks/: light_mlp_nets.py  light_rnn_nets.py  mappo_nets.py  mlp_nets.py  rnn_module.py  rnn_nets.py
networks/modules/: rnn.py
runners/: agent_specific_rnn_runner.py  happo_runner.py  light_mappo_runner.py  light_rnn_mappo_runner.py  mappo_runner.py  mlp_runner.py  rnn_runner.py
utils/: config.py  env_tools.py  logger.py  reward_normalization.py  reward_normalization_new.py  sc2_utils.py  transform_tools.py  value_normalizers.py  video_utils.py
